added 1 new async funtion for show employees

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="accordion-body" id="tableDaddy">
                   <strong>Here you can get a detail of your actual assets.</strong> Filter by employees or companies
                   <div class="buttonsOnAcordionBody">
-                    <button type="button" class="btn btn-outline-secondary" onclick="showEmployees()">Show Employees</button>
+                    <button type="button" class="btn btn-outline-secondary" onclick="showEmployeesAsync()">Show Employees</button>
                     <button type="button" class="btn btn-outline-secondary" onclick="showCompanies()">Show Companies</button>
                   </div>
                 </div>
